test/corpus/autocmds.txt
================================================================================
Basic
================================================================================

au BufNewFile *.html echo "foo"
au! BufNewFile *.html echo "foo"
autocmd BufNewFile *.html echo "foo"
autocmd! BufNewFile *.html echo "foo"

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal))))

================================================================================
No arguments
================================================================================

au!
autocmd!

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (bang))
  (autocmd_statement
    (bang)))

================================================================================
Multiple events
================================================================================

au BufNewFile,BufEnter *.html echo "foo"
au! BufNewFile,BufEnter *.html echo "foo"
autocmd BufNewFile,BufEnter *.html echo "foo"
autocmd! BufNewFile,BufEnter *.html echo "foo"

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (au_event_list
      (au_event)
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event)
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (au_event_list
      (au_event)
      (au_event))
    (pattern)
    (echo_statement
      (string_literal)))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event)
      (au_event))
    (pattern)
    (echo_statement
      (string_literal))))

================================================================================
Multiple patterns
================================================================================

au FileType json,js,html,c,cpp,h,hh setlocal tabstop=4
au! FileType json,js,html,c,cpp,h,hh setlocal tabstop=4
autocmd FileType json,js,html,c,cpp,h,hh setlocal tabstop=4
autocmd! FileType json,js,html,c,cpp,h,hh setlocal tabstop=4

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (setlocal_statement
      (set_item
        (option_name)
        (set_value))))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event))
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (setlocal_statement
      (set_item
        (option_name)
        (set_value))))
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (setlocal_statement
      (set_item
        (option_name)
        (set_value))))
  (autocmd_statement
    (bang)
    (au_event_list
      (au_event))
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (pattern)
    (setlocal_statement
      (set_item
        (option_name)
        (set_value)))))

================================================================================
Autocommand term pattern
================================================================================

au BufWinEnter term://* echo "foo"

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal))))

================================================================================
Autocommand with group
================================================================================

au augroup_name BufWinEnter term://* echo "foo"

--------------------------------------------------------------------------------

(script_file
  (autocmd_statement
    (augroup_name)
    (au_event_list
      (au_event))
    (pattern)
    (echo_statement
      (string_literal))))
