test/corpus/while_loop.txt
================================================================================
While loop without a body
================================================================================

while foo
endw

--------------------------------------------------------------------------------

(script_file
  (while_loop
    condition: (identifier)))

================================================================================
While loop with a body
================================================================================

while foo
  Bar
  Baz
endwhile

--------------------------------------------------------------------------------

(script_file
  (while_loop
    condition: (identifier)
    (body
      (user_command
        (command_name))
      (user_command
        (command_name)))))

================================================================================
Confusing while loop with range
================================================================================

while a < b
  +
  let line = q
endwhile

--------------------------------------------------------------------------------

(script_file
  (while_loop
    (binary_operation
      (identifier)
      (identifier))
    (body
      (range_statement
        (next_line))
      (let_statement
        (identifier)
        (identifier)))))
