test/corpus/wincmd_statement.txt
================================================================================
Wincmd basic
================================================================================

wincmd j
wincmd r
wincmd K
wincmd =

--------------------------------------------------------------------------------

(script_file
  (wincmd_statement)
  (wincmd_statement)
  (wincmd_statement)
  (wincmd_statement))

================================================================================
Wincmd count
================================================================================

4wincmd j
3wincmd r
12wincmd K
15 wincmd =

--------------------------------------------------------------------------------

(script_file
  (wincmd_statement
    (integer_literal))
  (wincmd_statement
    (integer_literal))
  (wincmd_statement
    (integer_literal))
  (wincmd_statement
    (integer_literal)))
